--- a/public/index.html
+++ b/public/index.html
@@ -23,14 +23,14 @@
     <button id = "btn-dang-ky" >Dang ky</button>
 
     <script type="text/javascript">
-      var btnDangKy = document.getElementById('btn-dang-ky');
+      const btnDangKy = document.getElementById('btn-dang-ky');
       btnDangKy.addEventListener('click', createAccount);
 
 
       // ham tao tai khoan khi click button
       function createAccount(){
-        var emailContent = document.getElementById('email').value;
-        var password = document.getElementById('password').value;
+        let emailContent = document.getElementById('email').value;
+        let password = document.getElementById('password').value;
         
         if(emailContent.length < 4) {
           alert('email phai dai hon 4 ky tu');
@@ -43,16 +43,16 @@
         firebase.auth().createUserWithEmailAndPassword(emailContent, password)
         .then(function(response){
           // luu email vua dang ky thanh cong vao database
-          var db = firebase.firestore();
+          const db = firebase.firestore();
           // them document user moi voi email la email vua tao
-          db.collection("user").add({
+          db.collection("users").add({
             email: emailContent
           })
-          .then(function(docRef){
-            console.log('email da them vao thanh cong', docRef.id);
+          .then(function(docRef) {
+            console.log("Document written with ID: ", docRef.id);
           })
-          .catch(function(err){
-            console.err(err);
+          .catch(function(error) {
+            console.error("Error adding document: ", error);
           });
           
           console.log('dang ky thanh cong');
@@ -62,8 +62,8 @@
         })
         .catch(function(error){
           // xu ly toi tai day
-          var errorCode = error.code;
-          var errorMessage = error.message;
+          let errorCode = error.code;
+          let errorMessage = error.message;
           // bat dau loai tru
           // neu mat khau yeu
           if(errorCode == 'auth/weak-password'){
