Edit index and trang chu

--- a/public/index.html
+++ b/public/index.html
@@ -29,8 +29,8 @@
 
       // ham tao tai khoan khi click button
       function createAccount(){
-        let emailContent = document.getElementById('email').value;
-        let password = document.getElementById('password').value;
+        var emailContent = document.getElementById('email').value;
+        var password = document.getElementById('password').value;
         
         if(emailContent.length < 4) {
           alert('email phai dai hon 4 ky tu');
